--- a/vignettes/recurrentpseudo.Rmd
+++ b/vignettes/recurrentpseudo.Rmd
@@ -194,6 +194,8 @@ $$
 One-dimensional pseudo-observations and GEE fit can be computed using the following code,
 
 ```{r cache = F}
+require(recurrentpseudo)
+
 # Pseudo observations at t = 30
 pseudo_bladder_1d <- pseudo.onedim(tstart = bladdersub$start,
                                    tstop = bladdersub$stop,
